--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,15 +9,14 @@ on:
 jobs:
   luacheck:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/mah0x211/lua-ci:latest
     steps:
     -
       name: Checkout
       uses: actions/checkout@v2
       with:
         submodules: 'true'
-    -
-      name: Setup Lua
-      uses: mah0x211/setup-lua@v1
     -
       name: Install Tools
       run: luarocks install luacheck
@@ -31,22 +30,24 @@ jobs:
     strategy:
       matrix:
         lua-version:
-          - "5.1.:latest"
-          - "5.2.:latest"
-          - "5.3.:latest"
-          - "5.4.:latest"
-          - "lj-v2.1:latest"
+          - "5.1."
+          - "5.2."
+          - "5.3."
+          - "5.4."
+          - "lj-v2.1"
+    container:
+      image: ghcr.io/mah0x211/lua-ci:latest
     steps:
+    -
+      name: Switch Lua Version
+      run: |
+        lenv -g use ${{ matrix.lua-version }}
+        lua -v || true
     -
       name: Checkout
       uses: actions/checkout@v2
       with:
         submodules: 'true'
-    -
-      name: Setup Lua ${{ matrix.lua-version }}
-      uses: mah0x211/setup-lua@v1
-      with:
-        versions: ${{ matrix.lua-version }}
     -
       name: Install Tools
       run: |
